Copy Request Bundle to DSF Test Setup

--- a/mii-process-feasibility/pom.xml
+++ b/mii-process-feasibility/pom.xml
@@ -335,6 +335,32 @@
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy-feasibility-request-bundle</id>
+                                <!-- here the phase you need -->
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>copy-resources</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${testSetup.location}/bundle</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>src/test/resources/fhir</directory>
+                                            <includes>
+                                                <include>feasibility-request-bundle.json</include>
+                                            </includes>
+                                            <filtering>true</filtering>
+                                        </resource>
+                                    </resources>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-clean-plugin</artifactId>
                         <configuration>
                             <filesets>
