Rename Profile to Match Other BPE Processes Profile Name

--- a/mii-process-feasibility/pom.xml
+++ b/mii-process-feasibility/pom.xml
@@ -272,7 +272,7 @@
     </build>
     <profiles>
         <profile>
-            <id>test-setup</id>
+            <id>copy-to-test-setup</id>
 
             <build>
                 <plugins>
